--- a/src/app/components/snackbar/snackbar-child/snackbar-child.component.html
+++ b/src/app/components/snackbar/snackbar-child/snackbar-child.component.html
@@ -1,1 +1,5 @@
-<p>Hello <strong>{{data.name}}</strong>, From another Component <button mat-raised-button color="primary" (click)="close()">close</button></p>
+<h4>Hello, Thank you for testing from another Component!</h4>
+<p>Message: '{{data.message}}'</p>
+<p>Action: '{{data.action}}'</p>
+
+<button mat-raised-button color="accent" (click)="closeDialog()">Close</button>
